--- a/src/exo/click.html
+++ b/src/exo/click.html
@@ -4,25 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercices</title>
+    <title>Exercices DOM</title>
     <link rel="stylesheet" href="/style.css">
-    <script src="click.js"></script>
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-gray-50">
     <div class="max-w-6xl mx-auto p-6">
-        <header class="bg-white shadow-md rounded-lg">
-            <h1 class="text-2xl font-bold text-gray-800 p-4 mb-4">Exercices DOM</h1>
-        </header>
-        <div class="flex flex-col ml-4">
-            <h2 id="title" class="text-xl font-semibold mt-4">D.O.M Events</h2>
-            <p class="text-gray-700 mt-2">Modifier le titre de la page lorsqu'on clique dessus (addEventListener) </p>
-            <div class="pt-6 flex ">
-                <a href="/"
-                    class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition-colors">Retour à la
-                    page d'accueil</a>
+        <div id="header-container" class="mb-6"></div>
+        <main class="bg-white shadow-md rounded-lg p-6">
+            <h1 class="text-3xl font-bold mb-8">Exercices DOM</h1>
+            <h2 id="title" class="text-2xl font-semibold mb-4">D.O.M Events</h2>
+            <p class="text-gray-700 mb-6">Modifier le titre de la page lorsqu'on clique dessus (addEventListener)</p>
+            <div class="flex">
+                <a href="/" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition-colors">Retour à la page d'accueil</a>
             </div>
-        </div>
+        </main>
+    </div>
+    <script type="module" src="/main.js"></script>
+    <script type="module" src="click.js"></script>
 </body>
 
 </html>
