--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
       <h1 class="text-3xl font-bold mb-8">Bienvenue sur le hub de cours Javascript</h1>
       <div class="grid grid-cols-1 gap-8">
 
-        <section class="bg-white rounded-lg shadow p-6 flex flex-col items-center gap-6">
+        <section class="bg-white rounded-lg shadow p-6">
           <div class="flex flex-row justify-between items-center">
-            <div class="w-1/2">
-              <img src="/lessons.jpg" alt="leçons illustration" class="w-32 h-32 object-cover rounded-lg p-2">
+            <div class="w-1/3 flex justify-center items-center">
+              <img src="/lessons.jpg" alt="leçons illustration" class="w-full h-auto max-w-[200px] max-h-[200px] object-contain rounded-lg">
             </div>
-            <div class="w-1/2">
+            <div class="w-2/3 pl-6">
               <h2 class="text-xl font-semibold mb-4">Leçons</h2>
               <p class="text-gray-600 mb-6">
                 Vous y trouverez des leçons et exemples pour aborder différentes thématiques du Javascript Moderne
@@ -32,9 +32,9 @@
           </div>
         </section>
 
-        <section class="bg-white rounded-lg shadow p-6 flex flex-col items-center gap-6">
+        <section class="bg-white rounded-lg shadow p-6">
           <div class="flex flex-row justify-between items-center">
-            <div class="w-1/2">
+            <div class="w-2/3 pr-6">
               <h2 class="text-xl font-semibold mb-4">Exercices</h2>
               <p class="text-gray-600 mb-6">
                 Trouvez des exercices pour pratiquer les leçons
@@ -43,18 +43,18 @@
                 Pratiquer
               </button>
             </div>
-            <div class="w-1/2">
-              <img src="/exo.jpg" alt="Exercices illustration" class="w-32 h-32 object-cover rounded-lg p-2">
+            <div class="w-1/3 flex justify-center items-center">
+              <img src="/exo.jpg" alt="Exercices illustration" class="w-full h-auto max-w-[200px] max-h-[200px] object-contain rounded-lg">
             </div>
           </div>
         </section>
 
-        <section class="bg-white rounded-lg shadow p-6 flex flex-col items-center gap-6">
+        <section class="bg-white rounded-lg shadow p-6">
           <div class="flex flex-row justify-between items-center">
-            <div class="w-1/2">
-              <img src="/lessons.jpg" alt="TP illustration" class="w-32 h-32 object-cover rounded-lg p-2">
+            <div class="w-1/3 flex justify-center items-center">
+              <img src="/lessons.jpg" alt="TP illustration" class="w-full h-auto max-w-[200px] max-h-[200px] object-contain rounded-lg">
             </div>
-            <div class="w-1/2">
+            <div class="w-2/3 pl-6">
               <h2 class="text-xl font-semibold mb-4">TP-Éval</h2>
               <p class="text-gray-600 mb-6">
                 Réunissez vos connaissances pour s'évaluer
@@ -65,6 +65,7 @@
             </div>
           </div>
         </section>
+
       </div>
     </main>
   </div>
