--- a/src/exo/exo_list.html
+++ b/src/exo/exo_list.html
@@ -6,15 +6,12 @@
     <title>Liste des Exercices</title>
     <link rel="stylesheet" href="/style.css">
 </head>
-<body class="bg-gray-50">
+<body class="bg-black">
     <div class="max-w-6xl mx-auto p-6">
         <div id="header-container" class="mb-6"></div>
-        <main class="bg-white shadow-md rounded-lg p-6">
-            <h1 class="text-3xl font-bold mb-8">Liste des Exercices</h1>
+        <main class="bg-[#0e0e0e] shadow-md rounded-lg p-6">
+            <h1 class="text-3xl font-bold mb-8 text-white">Liste des Exercices</h1>
             <div id="exercices-container" class="mb-6"></div>
-            <div class="flex">
-                <a href="/" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition-colors">Retour à la page d'accueil</a>
-            </div>
         </main>
     </div>
     <script type="module" src="/main.js"></script>
