--- a/src/exo/click.html
+++ b/src/exo/click.html
@@ -8,16 +8,13 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 
-<body class="bg-gray-50">
+<body class="bg-black">
     <div class="max-w-6xl mx-auto p-6">
         <div id="header-container" class="mb-6"></div>
-        <main class="bg-white shadow-md rounded-lg p-6">
-            <h1 class="text-3xl font-bold mb-8">Exercices DOM</h1>
-            <h2 id="title" class="text-2xl font-semibold mb-4">D.O.M Events</h2>
-            <p class="text-gray-700 mb-6">Modifier le titre de la page lorsqu'on clique dessus (addEventListener)</p>
-            <div class="flex">
-                <a href="/" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition-colors">Retour à la page d'accueil</a>
-            </div>
+        <main class="bg-[#0e0e0e] shadow-md rounded-lg p-6">
+            <h1 class="text-3xl font-bold mb-8 text-white">Exercices DOM</h1>
+            <h2 id="title" class="text-2xl font-semibold mb-4 text-white">D.O.M Events</h2>
+            <p class="text-gray-200 mb-6">Cliquez sur le titre 👆 </p>
         </main>
     </div>
     <script type="module" src="/main.js"></script>
