--- a/src/exo/pme.html
+++ b/src/exo/pme.html
@@ -6,14 +6,14 @@
     <title>Bilan PME</title>
     <link rel="stylesheet" href="../style.css">
 </head>
-<body class="bg-gray-50">
+<body class="bg-black">
     <div class="max-w-6xl mx-auto p-6">
         <div id="header-container" class="mb-6"></div>
-        <main class="bg-white shadow-md rounded-lg p-6">
-            <h1 class="text-3xl font-bold mb-8">Bilan annuel de la PME</h1>
+        <main class="bg-[#0e0e0e] shadow-md rounded-lg p-6">
+            <h1 class="text-3xl font-bold mb-8 text-white">Bilan annuel de la PME</h1>
             <div class="grid grid-cols-1 gap-8">
-                <section class="bg-white rounded-lg shadow p-6">
-                    <div id="bilan"></div>
+                <section class="bg-[#18181b] bg-opacity-90 rounded-lg shadow p-6">
+                    <div id="bilan" class="text-white"></div>
                 </section>
             </div>
         </main>
