--- a/src/index.html
+++ b/src/index.html
@@ -8,38 +8,38 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-gray-50">
+<body class="bg-black">
   <div class="max-w-6xl mx-auto p-6">
     <div id="header-container" class="mb-6"></div>
-    <main class="bg-white shadow-md rounded-lg p-6">
-      <h1 class="text-3xl font-bold mb-8">Bienvenue sur le hub de cours Javascript</h1>
+    <main class="bg-[#0e0e0e] shadow-md rounded-lg p-6">
+      <h1 class="text-3xl font-bold mb-8 text-white">Bienvenue sur le hub de cours Javascript</h1>
       <div class="grid grid-cols-1 gap-8">
 
-        <section class="bg-white rounded-lg shadow p-6">
+        <section class="bg-[#18181b] bg-opacity-90 rounded-lg shadow p-6">
           <div class="flex flex-row justify-between items-center">
             <div class="w-1/3 flex justify-center items-center">
               <img src="/lessons.jpg" alt="leçons illustration" class="w-full h-auto max-w-[200px] max-h-[200px] object-contain rounded-lg">
             </div>
             <div class="w-2/3 pl-6">
-              <h2 class="text-xl font-semibold mb-4">Leçons</h2>
-              <p class="text-gray-600 mb-6">
+              <h2 class="text-xl font-semibold mb-4 text-white">Leçons</h2>
+              <p class="text-gray-200 mb-6">
                 Vous y trouverez des leçons et exemples pour aborder différentes thématiques du Javascript Moderne
               </p>
-              <button class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition-colors">
+              <button class="bg-[#f7971e] hover:bg-[#ff9f0e] text-white px-4 py-2 rounded-md">
                 Apprendre
               </button>
             </div>
           </div>
         </section>
 
-        <section class="bg-white rounded-lg shadow p-6">
+        <section class="bg-[#18181b] bg-opacity-90 rounded-lg shadow p-6">
           <div class="flex flex-row justify-between items-center">
             <div class="w-2/3 pr-6">
-              <h2 class="text-xl font-semibold mb-4">Exercices</h2>
-              <p class="text-gray-600 mb-6">
+              <h2 class="text-xl font-semibold mb-4 text-white">Exercices</h2>
+              <p class="text-gray-200 mb-6">
                 Trouvez des exercices pour pratiquer les leçons
               </p>
-              <button class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition-colors">
+              <button class="bg-[#f7971e] hover:bg-[#ff9f0e] text-white px-4 py-2 rounded-md">
                 Pratiquer
               </button>
             </div>
@@ -49,17 +49,17 @@
           </div>
         </section>
 
-        <section class="bg-white rounded-lg shadow p-6">
+        <section class="bg-[#18181b] bg-opacity-90 rounded-lg shadow p-6">
           <div class="flex flex-row justify-between items-center">
             <div class="w-1/3 flex justify-center items-center">
               <img src="/lessons.jpg" alt="TP illustration" class="w-full h-auto max-w-[200px] max-h-[200px] object-contain rounded-lg">
             </div>
             <div class="w-2/3 pl-6">
-              <h2 class="text-xl font-semibold mb-4">TP-Éval</h2>
-              <p class="text-gray-600 mb-6">
+              <h2 class="text-xl font-semibold mb-4 text-white">TP-Éval</h2>
+              <p class="text-gray-200 mb-6">
                 Réunissez vos connaissances pour s'évaluer
               </p>
-              <button class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition-colors">
+              <button class="bg-[#f7971e] hover:bg-[#ff9f0e] text-white px-4 py-2 rounded-md">
                 TP-Eval
               </button>
             </div>
