--- a/src/exo/class.html
+++ b/src/exo/class.html
@@ -33,6 +33,6 @@
         </main>
     </div>
     <script type="module" src="/main.js"></script>
-    <script src="class.js"></script>
+    <script type="module" src="class.js"></script>
 </body>
 </html>
