--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 <body class="bg-black">
   <div class="max-w-6xl mx-auto p-6">
     <div id="header-container" class="mb-6"></div>
+    <div id="quote-container"></div>
     <main class="bg-[#0e0e0e] shadow-md rounded-lg p-6">
       <h1 class="text-3xl font-bold mb-8 text-white">Bienvenue sur le hub de cours Javascript</h1>
       <div class="grid grid-cols-1 gap-8">
@@ -68,6 +69,7 @@
 
       </div>
     </main>
+    <div id="footer-container"></div>
   </div>
   <script type="module" src="/main.js"></script>
 </body>
