ajout de footer a toutes les pages, modification bouton sur page todo_task

--- a/src/exo/api_user.html
+++ b/src/exo/api_user.html
@@ -19,6 +19,7 @@
                 </section>
             </div>
         </main>
+        <div id="footer-container"></div>
     </div>
     <script type="module" src="/main.js"></script>
     <script type="module" src="api_user.js"></script>
