--- a/src/exo/bibliotheque.html
+++ b/src/exo/bibliotheque.html
@@ -60,6 +60,7 @@
                 <div id="livres" class="space-y-2 text-white"></div>
             </div>
         </main>
+        <div id="footer-container"></div>
     </div>
     <script type="module" src="/main.js"></script>
     <script type="module" src="bibliotheque.js"></script>
