--- a/src/exo/dom.html
+++ b/src/exo/dom.html
@@ -66,6 +66,7 @@
                 </div>
             </div>
         </main>
+        <div id="footer-container"></div>
     </div>
     <script type="module" src="/main.js"></script>
     <script type="module" src="/exo/dom.js"></script>
