--- a/src/exo/exo_list.html
+++ b/src/exo/exo_list.html
@@ -13,6 +13,7 @@
             <h1 class="text-3xl font-bold mb-8 text-white">Liste des Exercices</h1>
             <div id="exercices-container" class="mb-6"></div>
         </main>
+        <div id="footer-container"></div>
     </div>
     <script type="module" src="/main.js"></script>
     <script type="module" src="exo_list.js"></script>
