--- a/src/exo/firebase.html
+++ b/src/exo/firebase.html
@@ -56,8 +56,8 @@
                 <ul id="user-list" class="space-y-2 text-white"></ul>
             </div>
         </main>
+        <div id="footer-container"></div>
     </div>
-
     <!-- Scripts Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
