--- a/src/exo/pme.html
+++ b/src/exo/pme.html
@@ -17,6 +17,7 @@
                 </section>
             </div>
         </main>
+        <div id="footer-container"></div>
     </div>
     <script type="module" src="/main.js"></script>
     <script type="module" src="pme.js"></script>
