--- a/src/exo/class.html
+++ b/src/exo/class.html
@@ -31,6 +31,7 @@
                 <div id="result" class="mt-4 text-white"></div>
             </div>
         </main>
+        <div id="footer-container"></div>
     </div>
     <script type="module" src="/main.js"></script>
     <script type="module" src="class.js"></script>
