--- a/src/exo/click.html
+++ b/src/exo/click.html
@@ -16,6 +16,7 @@
             <h2 id="title" class="text-2xl font-semibold mb-4 text-white">D.O.M Events</h2>
             <p class="text-gray-200 mb-6">Cliquez sur le titre 👆 </p>
         </main>
+        <div id="footer-container"></div>
     </div>
     <script type="module" src="/main.js"></script>
     <script type="module" src="click.js"></script>
