--- a/src/exo/todo_user.html
+++ b/src/exo/todo_user.html
@@ -78,6 +78,7 @@
                 </button>
             </div>
         </main>
+        <div id="footer-container"></div>
     </div>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
